bitwarden-cli (2025.8.0-1) unstable; urgency=medium

  * Initial release for Debian
  * Package Bitwarden CLI version 2025.8.0

 -- Vladimir Kosteley <debian@ismd.dev>  Mon, 13 Oct 2025 00:00:00 +0000