@@ -40,3 +40,28 @@ License: GPL-3.0
  .
  On Debian systems, the complete text of the GNU General
  Public License version 3 can be found in "/usr/share/common-licenses/GPL-3".
+
+Files: node_modules/*
+Copyright: Various authors (see individual package.json files)
+License: Various
+Comment: This package bundles npm dependencies in the source tarball.
+ The vast majority are licensed under MIT, ISC, BSD-2-Clause, BSD-3-Clause,
+ or Apache-2.0 licenses, all of which are GPL-compatible and DFSG-free.
+ .
+ A complete list of bundled dependencies with their licenses can be
+ generated by running:
+   npm list --all --long
+ .
+ The most common licenses among bundled dependencies are:
+  - MIT License (the majority of packages)
+  - ISC License
+  - BSD-2-Clause and BSD-3-Clause
+  - Apache-2.0
+ .
+ All bundled dependencies are Free Software compatible with DFSG
+ (Debian Free Software Guidelines) and the GPL-3.0 license of the
+ main package.
+ .
+ For detailed license information of individual packages, see:
+  - Each package's package.json in node_modules/
+  - Use debian/helpers/list-npm-dependencies.sh to generate a report
