@@ -1,18 +1,7 @@
-#!/bin/bash
+#!/bin/sh
 set -e
 
-case "$1" in
-    configure)
-        echo "Bitwarden CLI has been installed successfully."
-        echo "You can now use the 'bw' command to manage your Bitwarden vault."
-        echo "Run 'bw --help' to get started."
-        ;;
-    abort-upgrade|abort-remove|abort-deconfigure)
-        ;;
-    *)
-        echo "postinst called with unknown argument \`$1'" >&2
-        exit 1
-        ;;
-esac
+# Automatically added by dh_installdeb
+#DEBHELPER#
 
 exit 0
