@@ -1,16 +1,7 @@
-#!/bin/bash
+#!/bin/sh
 set -e
 
-case "$1" in
-    remove|upgrade|deconfigure)
-        echo "Removing Bitwarden CLI..."
-        ;;
-    failed-upgrade)
-        ;;
-    *)
-        echo "prerm called with unknown argument \`$1'" >&2
-        exit 1
-        ;;
-esac
+# Automatically added by dh_installdeb
+#DEBHELPER#
 
 exit 0
