@@ -1,0 +1,3 @@
+Tests: smoke-test
+Depends: bitwarden-cli
+Restrictions: superficial
