@@ -2,5 +2,7 @@ bitwarden-cli (2025.8.0-1) unstable; urgency=medium
 
   * Initial release for Debian
   * Package Bitwarden CLI version 2025.8.0
+  * Build with bundled npm dependencies
+  * Standalone binary created with pkg (no Node.js runtime dependency)
 
- -- Vladimir Kosteley <debian@ismd.dev>  Mon, 13 Oct 2025 00:00:00 +0000
+ -- Vladimir Kosteley <debian@ismd.dev>  Tue, 28 Oct 2025 16:00:00 +0100
